--- a/vinay_examples/spring_boot_gradle_demo/build.gradle
+++ b/vinay_examples/spring_boot_gradle_demo/build.gradle
@@ -15,10 +15,16 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
+compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test
+testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.2.9.RELEASE'
+	
 }
 
 test {
